--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,14 @@ body {
   width: calc(25% - 36px);
 
 }
-
+.react-tel-input .flag-dropdown{
+  background-color: white !important;
+  border-right: 0 !important;
+  border-radius: 6px !important;
+}
+.flag-dropdown {
+  padding-left: 5px !important;
+}
 button:focus,
 button:focus-visible {
   outline: none;
